<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/levels_IB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_shape"
                android:onClick="openLevels" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/levels"
                android:textColor="#d9d9d9"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/endless_mode_IB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_shape"
                android:onClick="startEndlessGame" />

            <TextView
                android:id="@+id/endless_mode_TV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/endless_mode"
                android:textColor="#d9d9d9"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/high_score_TV"
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:textColor="#d9d9d9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/mindfulness_game_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:gravity="center"
        android:text="@string/mindfulness_game"
        android:textColor="#d9d9d9"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageButton
        android:id="@+id/settings_IB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_shape"
        android:onClick="openSettings"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>