<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f01ff0"
    tools:context=".LevelsActivity">

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88008c"
            android:onClick="exitToMainMenu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_menu"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#d9d9d9"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88008c"
        android:gravity="center"
        android:text="@string/choose_level"
        android:textColor="#d9d9d9"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number1_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="1"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number2_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="2"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number3_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="3"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

        </TableRow>

        <TableRow>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number4_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="4"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number5_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="5"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number6_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="6"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

        </TableRow>

        <TableRow>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number7_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="7"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number8_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="8"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number9_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="9"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

        </TableRow>

        <TableRow>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp"/>

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageButton
                    android:id="@+id/level_button10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:background="#88008c"/>

                <TextView
                    android:id="@+id/level_number10_TV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:text="10"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="#d9d9d9"
                    android:gravity="center"/>

            </FrameLayout>

        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88008c"
            android:onClick="chooseLevel"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#d9d9d9"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>